Added `.u-hero-wrapper--double` helper class to help positioning elements next to double logos

--- a/grid.html
+++ b/grid.html
@@ -93,7 +93,7 @@
         <img src="https://cdn.antwerpen.be/core_branding_scss/6.1.1/assets/images/a-logo.svg" alt="Official logo Antwerpen">
       </a>
     </header>
-    <div class="u-hero-wrapper">
+    <div class="u-hero-wrapper u-hero-wrapper--double">
       <h1 class="h2 u-margin-bottom-xs u-margin-top-xs">Flexbox grid</h1>
     </div>
     <div class="main u-wrapper">
